syntax = "proto3";

import "transaction.proto";
import "certificates.proto";

option go_package = "github.com/alphabill-org/alphabill/internal/block;block";

message Block {
  bytes system_identifier = 1;
  bytes shard_identifier = 2;
  bytes previous_block_hash = 3;
  // ID of a node that proposed this block
  string node_identifier = 4;
  repeated Transaction transactions = 5;
  UnicityCertificate unicity_certificate = 6;
}
